fix color contrast

--- a/src/components/Menu/styles.scss
+++ b/src/components/Menu/styles.scss
@@ -1,6 +1,6 @@
 .menu {
   background-color: #fff;
-  color: #000;
+  color: #585858;
   height: 80px;
   display: flex;
   justify-content: space-between;
