--- a/src/pages/Detail/styles.scss
+++ b/src/pages/Detail/styles.scss
@@ -128,6 +128,6 @@
   }
 
   .time {
-    color: #b9b9b9;
+    color: #585858;
   }
 }
