--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -63,7 +63,7 @@
     display: flex;
     align-items: center;
     text-decoration: none;
-    color: #b9b9b9;
+    color: #565656;
     position: relative;
     height: 30px;
 
