--- a/src/pages/List/styles.scss
+++ b/src/pages/List/styles.scss
@@ -103,7 +103,7 @@
     }
 
     &__artist {
-      color: #969696;
+      color: #545454;
     }
   }
 
